# grid-game

./: .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md
docs/: BUILD.bazel  index.html  script.js  style.css
fonts/: BUILD.bazel
ops/observability/: .env.example  README.md  docker-compose.yml
ops/observability/collector/: config.yaml
ops/observability/grafana/dashboards/: grid-game-client.json  grid-game-gameplay.json  grid-game-jvm.json  grid-game-overview.json
ops/observability/grafana/provisioning/dashboards/: dashboards.yaml
ops/observability/grafana/provisioning/datasources/: datasources.yaml
ops/observability/loki/: loki.yaml
ops/observability/prometheus/: prometheus.yml
ops/observability/tempo/: tempo.yaml
scripts/: generate_all_new_characters.py  generate_assassin.py  generate_beasts.py  generate_elementals.py  generate_gladiator.py  generate_medieval.py  generate_mythological.py  generate_plaguedoctor.py  generate_raptor.py  generate_samurai.py  generate_scifi.py  generate_soldier.py  generate_spaceman.py  generate_specialists.py  generate_tidecaller.py  generate_tiles.py  generate_transition_masks.py  generate_undead.py  generate_vampire.py  generate_warden.py  generate_wizard.py  generate_wraith.py  sprite_base.py
sprites/: BUILD.bazel
src/main/java/com/gridgame/client/: BUILD.bazel  ClientMain.java  GameClient.java  Main.java  NetworkThread.java
src/main/java/com/gridgame/client/input/: KeyboardHandler.java
src/main/java/com/gridgame/client/ui/: GameCanvas.java
src/main/java/com/gridgame/common/: BUILD.bazel  Constants.java
src/main/java/com/gridgame/common/model/: Player.java  Position.java
src/main/java/com/gridgame/common/protocol/: Packet.java  PacketSerializer.java  PacketType.java  PlayerJoinPacket.java  PlayerLeavePacket.java  PlayerUpdatePacket.java
src/main/java/com/gridgame/server/: BUILD.bazel  ClientHandler.java  ClientRegistry.java  GameServer.java  ServerMain.java
src/main/scala/com/gridgame/client/: BUILD.bazel  ClientMain.scala  GameClient.scala  Main.scala  NetworkThread.scala
src/main/scala/com/gridgame/client/gl/: DamageNumberSystem.scala  GLFWManager.scala  GLFontRenderer.scala  GLGameRenderer.scala  GLProjectileRenderers.scala  GLSpriteGenerator.scala  GLTexture.scala  GLTileRenderer.scala  GLWindow.scala  LightSystem.scala  Matrix4.scala  ParticleSystem.scala  PostProcessor.scala  ShaderProgram.scala  ShapeBatch.scala  SpriteBatch.scala  TextureRegion.scala  TileTransitionRenderer.scala
src/main/scala/com/gridgame/client/input/: ControllerHandler.scala  GLKeyboardHandler.scala  GLMouseHandler.scala  KeyboardHandler.scala  MouseHandler.scala
src/main/scala/com/gridgame/client/render/: EntityCollector.scala  GameCamera.scala  IsometricTransform.scala
src/main/scala/com/gridgame/client/ui/: AbilityPreviewRenderer.scala  BackgroundRenderer.scala  CharacterSelectionPanel.scala  GameCanvas.scala  SpriteGenerator.scala  TileRenderer.scala
src/main/scala/com/gridgame/common/: BUILD.bazel  Constants.scala  WorldRegistry.scala
src/main/scala/com/gridgame/common/model/: CharacterDef.scala  CharacterId.scala  Direction.scala  Item.scala  ItemType.scala  LobbyInfo.scala  Player.scala  Position.scala  Projectile.scala  ProjectileDef.scala  ScoreEntry.scala  Tile.scala  WorldData.scala
src/main/scala/com/gridgame/common/observability/: Attrs.scala  Log.scala  Metrics.scala  Telemetry.scala  Tracing.scala
src/main/scala/com/gridgame/common/protocol/: AuthRequestPacket.scala  AuthResponsePacket.scala  ChatMessagePacket.scala  GameEventPacket.scala  HeartbeatPacket.scala  ItemPacket.scala  LeaderboardPacket.scala  LobbyActionPacket.scala  MatchHistoryPacket.scala  Packet.scala  PacketSerializer.scala  PacketSigner.scala  PacketType.scala  PlayerJoinPacket.scala  PlayerLeavePacket.scala  PlayerUpdatePacket.scala  ProjectilePacket.scala  RankedQueuePacket.scala  SerializeUtil.scala  SessionTokenPacket.scala  TileUpdatePacket.scala  WorldInfoPacket.scala
src/main/scala/com/gridgame/common/world/: WorldLoader.scala
src/main/scala/com/gridgame/mapeditor/: BUILD.bazel  DrawingTools.scala  EditorCanvas.scala  EditorState.scala  EditorTileRenderer.scala  Main.scala  MapEditorApp.scala  MenuBarBuilder.scala  NewMapDialog.scala  PropertiesPanel.scala  StatusBar.scala  TilePalette.scala  ToolBar.scala  UndoManager.scala  WorldSaver.scala
src/main/scala/com/gridgame/server/: AuthDatabase.scala  BUILD.bazel  BotController.scala  BotManager.scala  ClientHandler.scala  ClientRegistry.scala  DashboardPage.scala  DashboardServer.scala  GameInstance.scala  GameServer.scala  ItemManager.scala  KillTracker.scala  Lobby.scala  LobbyHandler.scala  LobbyManager.scala  PacketValidator.scala  ProjectileManager.scala  RankedQueue.scala  RateLimiter.scala  ServerEventLog.scala  ServerMain.scala  ServerMetrics.scala  TlsProvider.scala
src/test/java/com/gridgame/common/: BUILD.bazel  ConstantsTest.java
src/test/java/com/gridgame/common/model/: BUILD.bazel  PositionTest.java
src/test/scala/com/gridgame/common/: BUILD.bazel  ConstantsTest.scala
src/test/scala/com/gridgame/common/model/: BUILD.bazel  PositionTest.scala
worlds/: BUILD.bazel  arena.json  badlands.json  battlegrounds.json  bone_pit.json  castle.json  cryo_chamber.json  dark_matter_lab.json  derelict_ship.json  dueling_islands.json  enchanted_ruins.json  fortress.json  frozen_colosseum.json  island.json  kings_canyon.json  lava_bridges.json  maze.json  meadow.json  neon_crypt.json  neon_grid.json  phantom_corridors.json  plague_ward.json  reactor_core.json  shadow_forge.json  shipwreck_bay.json  singularity.json  station_nexus.json  the_abyss.json  the_cell.json  the_colony.json  the_crucible.json  the_hive.json  the_necropolis.json  the_nexus.json  toxic_spire.json  toxic_wasteland.json  void_station.json  volcano.json  warp_gate.json  winter.json
