module(name = "java-game")

bazel_dep(name = "rules_java", version = "7.11.1")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_scala", version = "7.0.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.openjfx:javafx-base:21.0.1",
        "org.openjfx:javafx-controls:21.0.1",
        "org.openjfx:javafx-fxml:21.0.1",
        "org.openjfx:javafx-graphics:21.0.1",
        "org.openjfx:javafx-media:21.0.1",
        "org.openjfx:javafx-web:21.0.1",
        # Windows JavaFX native libraries for cross-platform builds
        "org.openjfx:javafx-base:jar:win:21.0.1",
        "org.openjfx:javafx-controls:jar:win:21.0.1",
        "org.openjfx:javafx-graphics:jar:win:21.0.1",
        "com.google.guava:guava:32.1.3-jre",
        "com.google.code.gson:gson:2.10.1",
        "io.netty:netty-buffer:4.1.104.Final",
        "io.netty:netty-codec:4.1.104.Final",
        "io.netty:netty-common:4.1.104.Final",
        "io.netty:netty-handler:4.1.104.Final",
        "io.netty:netty-transport:4.1.104.Final",
        "io.netty:netty-transport-native-unix-common:4.1.104.Final",
        "junit:junit:4.13.2",
        "org.xerial:sqlite-jdbc:3.44.0.0",
        "org.lwjgl:lwjgl:3.3.4",
        "org.lwjgl:lwjgl-glfw:3.3.4",
        "org.lwjgl:lwjgl:jar:natives-macos-arm64:3.3.4",
        "org.lwjgl:lwjgl-glfw:jar:natives-macos-arm64:3.3.4",
        # Windows LWJGL native libraries
        "org.lwjgl:lwjgl:jar:natives-windows:3.3.4",
        "org.lwjgl:lwjgl-glfw:jar:natives-windows:3.3.4",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    fetch_sources = True,
)
use_repo(maven, "maven")

# Scala toolchain configuration
scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "2.13.16")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()
scala_deps.junit()

scala_toolchains = use_extension(
    "@rules_scala//scala/extensions:toolchains.bzl",
    "scala_toolchains",
)
scala_toolchains.testing()
