java_binary(
    name = "client",
    main_class = "com.gridgame.client.Main",
    srcs = glob(["**/*.java"]),
    deps = [
        "//src/main/java/com/gridgame/common",
        "@maven//:org_openjfx_javafx_base",
        "@maven//:org_openjfx_javafx_controls",
        "@maven//:org_openjfx_javafx_fxml",
        "@maven//:org_openjfx_javafx_graphics",
        "@maven//:org_openjfx_javafx_base_mac_aarch64",
        "@maven//:org_openjfx_javafx_controls_mac_aarch64",
        "@maven//:org_openjfx_javafx_graphics_mac_aarch64",
    ],
)
