load("@rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "client",
    main_class = "com.gridgame.client.Main",
    srcs = glob(["**/*.scala"]),
    resources = ["//worlds:world_files", "//sprites:sprite_files"],
    deps = [
        "//src/main/scala/com/gridgame/common",
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_codec",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_handler",
        "@maven//:io_netty_netty_transport",
        "@maven//:org_openjfx_javafx_base",
        "@maven//:org_openjfx_javafx_controls",
        "@maven//:org_openjfx_javafx_fxml",
        "@maven//:org_openjfx_javafx_graphics",
        "@maven//:org_openjfx_javafx_base_mac_aarch64",
        "@maven//:org_openjfx_javafx_controls_mac_aarch64",
        "@maven//:org_openjfx_javafx_graphics_mac_aarch64",
    ],
)

scala_binary(
    name = "client_windows",
    main_class = "com.gridgame.client.Main",
    srcs = glob(["**/*.scala"]),
    resources = ["//worlds:world_files", "//sprites:sprite_files"],
    deps = [
        "//src/main/scala/com/gridgame/common",
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_codec",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_handler",
        "@maven//:io_netty_netty_transport",
        "@maven//:org_openjfx_javafx_base",
        "@maven//:org_openjfx_javafx_controls",
        "@maven//:org_openjfx_javafx_fxml",
        "@maven//:org_openjfx_javafx_graphics",
        "@maven//:org_openjfx_javafx_base_win",
        "@maven//:org_openjfx_javafx_controls_win",
        "@maven//:org_openjfx_javafx_graphics_win",
    ],
)
