load("@rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "mapeditor",
    main_class = "com.gridgame.mapeditor.Main",
    srcs = glob(["**/*.scala"]),
    resources = ["//sprites:sprite_files"],
    deps = [
        "//src/main/scala/com/gridgame/common",
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_openjfx_javafx_base",
        "@maven//:org_openjfx_javafx_controls",
        "@maven//:org_openjfx_javafx_fxml",
        "@maven//:org_openjfx_javafx_graphics",
        "@maven//:org_openjfx_javafx_base_mac_aarch64",
        "@maven//:org_openjfx_javafx_controls_mac_aarch64",
        "@maven//:org_openjfx_javafx_graphics_mac_aarch64",
    ],
)

scala_binary(
    name = "mapeditor_windows",
    main_class = "com.gridgame.mapeditor.Main",
    srcs = glob(["**/*.scala"]),
    resources = ["//sprites:sprite_files"],
    deps = [
        "//src/main/scala/com/gridgame/common",
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_openjfx_javafx_base",
        "@maven//:org_openjfx_javafx_controls",
        "@maven//:org_openjfx_javafx_fxml",
        "@maven//:org_openjfx_javafx_graphics",
        "@maven//:org_openjfx_javafx_base_win",
        "@maven//:org_openjfx_javafx_controls_win",
        "@maven//:org_openjfx_javafx_graphics_win",
    ],
)
