load("@rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "server",
    main_class = "com.gridgame.server.ServerMain",
    srcs = glob(["**/*.scala"]),
    resources = ["//worlds:world_files"],
    deps = [
        "//src/main/scala/com/gridgame/common",
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_codec",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_handler",
        "@maven//:io_netty_netty_transport",
        "@maven//:org_xerial_sqlite_jdbc",
        "@maven//:org_mindrot_jbcrypt",
    ],
)
